force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
  <label>Inventory</label>
  <pluralLabel>Inventories</pluralLabel>
  <nameField>
    <label>Menu Item Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>