force-app/main/default/objects/Inventory__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
  <fullName>Last_Updated__c</fullName>
  <label>Last Updated</label>
  <type>DateTime</type>
</CustomField>