force-app/main/default/objects/Inventory__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
  <fullName>Quantity_Available__c</fullName>
  <label>Quantity Available</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>