force-app/main/default/objects/Inventory__c/fields/Reorder_Level__c.field-meta.xml
<CustomField>
  <fullName>Reorder_Level__c</fullName>
  <label>Reorder Level</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>