force-app/main/default/objects/Inventory__c/fields/Unit__c.field-meta.xml
<CustomField>
  <fullName>Unit__c</fullName>
  <label>Unit</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Kg</fullName>
      </value>
      <value>
        <fullName>Litre</fullName>
      </value>
      <value>
        <fullName>Pieces</fullName>
      </value>
      <value>
        <fullName>Pack</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>